--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,20 @@
     <string name="get_verify_code">获取验证码</string>
     <string name="regist">注册</string>
     <string name="regist_protocal_tip">点击注册即表示已经阅读并接收</string>
+
+    <string name="nickname">昵称：</string>
+    <string name="please_input_nickname">昵称不超过20个字符或10个中文</string>
+    <string name="set_nickname_title">你离芒果派只差一步</string>
+    <string name="finish">完成</string>
+
+    <string name="update_profile_info">修改个人信息></string>
+
+    <string name="my_role">身份：</string>
+    <string name="my_order_list">我的订单</string>
+    <string name="my_works">我的工作包</string>
+    <string name="my_classes">我的授课</string>
+    <string name="my_account">我的账户</string>
+    <string name="setting">设置</string>
+
+    <string name="update_my_role">身份升级</string>
 </resources>
