--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">芒果派</string>
 
+    <string name="login_mango">登录芒果派</string>
+    <string name="login_with_wx">使用微信登陆</string>
     <string name="common_back">返回</string>
 
     <string name="please_input_phone">请输入11位手机号码</string>
