--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="login_mango">登录芒果派</string>
     <string name="login_with_wx">使用微信登陆</string>
     <string name="common_back">返回</string>
+    <string name="rmb">&#165;</string>
 
     <string name="please_input_phone">请输入11位手机号码</string>
     <string name="please_input_password">请输入密码</string>
@@ -50,6 +51,4 @@
     <string name="about_CV">简历相关</string>
     <string name="cantact_way">联系方式</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
