--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="login_with_wx">使用微信登陆</string>
     <string name="common_back">返回</string>
     <string name="rmb">&#165;</string>
+    <string name="please_wait">请稍候...</string>
 
     <string name="please_input_phone">请输入11位手机号码</string>
     <string name="please_input_password">请输入密码</string>
@@ -50,5 +51,11 @@
     <string name="school_info">学校信息</string>
     <string name="about_CV">简历相关</string>
     <string name="cantact_way">联系方式</string>
+
+    <string name="noconnectionremind">无网络连接</string>
+    <string name="wrongconnectionremind">网络出了点小问题</string>
+    <string name="noconnection">无网络连接</string>
+    <string name="live_network_error">您的网络有问题，请检查重试</string>
+    <string name="noconnectionremind_for_draft">没有网络连接，请检查网络设置</string>
 
 </resources>
