--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,15 +9,19 @@
     <string name="uninstalled_wx">未安装微信</string>
 
     <string name="please_input_phone">请输入11位手机号码</string>
+    <string name="please_input_smscode">请输入验证码</string>
     <string name="please_input_password">请输入密码</string>
     <string name="login">登录</string>
     <string name="login_protocal_tip">点击登录即表示已经阅读并接收</string>
     <string name="user_protocal">《用户协议》</string>
     <string name="please_regist">还没账号？快了注册吧>></string>
+    <string name="login_failure">登录失败，请稍候重试</string>
+    <string name="get_verify_code_failure">获取验证码失败，请稍候重试</string>
 
     <string name="get_verify_code">获取验证码</string>
     <string name="regist">注册</string>
     <string name="regist_protocal_tip">点击注册即表示已经阅读并接收</string>
+    <string name="please_input_right_phone">请输入正确的手机号</string>
 
     <string name="nickname">昵称：</string>
     <string name="please_input_nickname">昵称不超过20个字符或10个中文</string>
