--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="login_mango">登录芒果派</string>
     <string name="login_with_wx">使用微信登陆</string>
     <string name="common_back">返回</string>
+    <string name="refresh">刷新</string>
     <string name="rmb">&#165;</string>
     <string name="please_wait">请稍候...</string>
     <string name="uninstalled_wx">未安装微信</string>
@@ -56,6 +57,11 @@
     <string name="school_info">学校信息</string>
     <string name="about_CV">简历相关</string>
     <string name="cantact_way">联系方式</string>
+
+    <string name="found">发现</string>
+    <string name="publish">发布</string>
+    <string name="please_input_content">请输入内容</string>
+    <string name="input_num">您还可以写%s字</string>
 
     <string name="noconnectionremind">无网络连接</string>
     <string name="wrongconnectionremind">网络出了点小问题</string>
