--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,10 +65,15 @@
 
     <string name="interact_area">互动区</string>
 
+    <string name="teacher">导师</string>
+
     <string name="noconnectionremind">无网络连接</string>
     <string name="wrongconnectionremind">网络出了点小问题</string>
     <string name="noconnection">无网络连接</string>
     <string name="live_network_error">您的网络有问题，请检查重试</string>
     <string name="noconnectionremind_for_draft">没有网络连接，请检查网络设置</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
