--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="live_network_error">您的网络有问题，请检查重试</string>
     <string name="noconnectionremind_for_draft">没有网络连接，请检查网络设置</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="please_select_gender">请选择性别</string>
+    <string name="please_input_nick_name">请输入昵称</string>
+    <string name="update_member_failure">设置用户信息失败，请稍后重试</string>
 </resources>
