--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,6 @@
     <string name="wanted_count">%d听过</string>
 
     <string name="course_detail">课程详情</string>
+
+    <string name="order_detail">订单详情</string>
 </resources>
