--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="login_with_wx">使用微信登陆</string>
     <string name="common_back">返回</string>
     <string name="refresh">刷新</string>
+    <string name="sure_submit">确定</string>
     <string name="rmb">&#165;</string>
     <string name="please_wait">请稍候...</string>
     <string name="uninstalled_wx">您还未安装微信</string>
