--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,6 +120,8 @@
     <string name="course_detail">课程详情</string>
 
     <string name="order_detail">订单详情</string>
+    <string name="pay_detail">支付详情</string>
 
     <string name="message">消息</string>
+    <string name="fav">收藏</string>
 </resources>
