--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,5 +134,5 @@
     <string name="picture_uploading">图片正在上传，请稍候</string>
     <string name="picture_upload_success">图片上传成功</string>
     <string name="picture_upload_failure">图片上传失败</string>
-
+    <string name="star_code">&#10033;</string>
 </resources>
