--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,6 @@
     <string name="picture_upload_success">图片上传成功</string>
     <string name="picture_upload_failure">图片上传失败</string>
     <string name="star_code">&#10033;</string>
+
+    <string name="my_join_works">我参与的工作包</string>
 </resources>
