--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,5 @@
     <string name="star_code">&#10033;</string>
 
     <string name="my_join_works">我参与的工作包</string>
+    <string name="my_company_works">我的企业工作包</string>
 </resources>
