--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="login_mango">登录芒果派</string>
     <string name="login_with_wx">使用微信登陆</string>
     <string name="common_back">返回</string>
+    <string name="cancel">取消</string>
     <string name="refresh">刷新</string>
     <string name="sure_submit">确定</string>
     <string name="rmb">&#165;</string>
