--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     <string name="found">发现</string>
     <string name="publish">发布</string>
     <string name="please_input_content">请输入内容</string>
+    <string name="please_input_something">写点什么吧...</string>
     <string name="input_num">您还可以写%s字</string>
 
     <string name="interact_area">互动区</string>
@@ -169,4 +170,5 @@
     <string name="member_name_role">%1$s（%2$s）</string>
     <string name="member_count">%d人</string>
 
+    <string name="forward">转发</string>
 </resources>
