--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,8 +56,8 @@
     <string name="phone_num">手机号</string>
     <string name="trans_pwd">交易密码</string>
     <string name="about_us">关于我们</string>
-    <string name="about_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;乐享芒果派微信公众号是一家以帮助大学生成才为使命的移动互联网公司，旗下拥有乐享芒果派、双创学院、青年成长书院等产品和服务，最终通过产品+服务的方式，打造一个青年优秀人才的孵化平台。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;乐享芒果派微信公众号定位于大学生成长社区，核心功能为习惯养成和轻社团，帮助大学生养成好习惯，找到志同道合的人，一起学习和成长，记录成长的轨迹。</string>
-    <string name="about_company_year">Copyright © 2006 - 2013</string>
+    <string name="about_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;芒果派是广州互原电子商务公司旗下百分百控股项目。作为一个新型大学生服务平台，芒果派结合助力企业，发起多类传统行业与互联网相结合的专案项目。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;大学生自发组队，可同时通过芒果派平台上职场实操导师团的技能及经验指导，按企业运营标准来开展项目，完成项目工作包。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在电商平台建设运营、人力资源及市场推广方面，团队骨干成员均具有10年以上工作经验。在创新项目包模式运营实操方面，团队亦屡创佳绩！项目投资诸如广交会电商大学生实践项目，卡奔跨境购物平台微店长项目等，均由芒果团队与行业大咖联合出品。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;而在校企合作方面，芒果派团队亦是行业翘楚。坐拥广东、湖南、江苏、青岛、广西五省的百所高校资源并动态更新，依仗昔日校企合作丰富的项目案例和实践阅历，团队带着芒果派在放飞自我的路上越走越远~ </string>
+    <string name="about_company_year">Copyright © 2017 - 2018</string>
     <string name="about_company">广州市互原电子商务有限公司</string>
     <string name="share_to_friend">分享给好友</string>
     <string name="clear_cache">清除缓存</string>
