--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="my_order_list">我的订单</string>
     <string name="my_works">我的工作包</string>
     <string name="my_classes">我的授课</string>
+    <string name="my_class_schedule">我的授课安排</string>
     <string name="my_account">我的账户</string>
     <string name="setting">设置</string>
 
